--- a/public/index.html
+++ b/public/index.html
@@ -11,35 +11,51 @@
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 
-<body id="body">
-  <header id="header"> || Move It Move It ||</header>
+<body class="body">
+  <!--<header id="header"> || Move It Move It || Have you moved today?</header>-->
+  <section>
+    <div class="container">
+      <h1>|| Move It Move It || Have you moved today?</h1>
+    </div>
+    <div class="container">
+      <button class="fetch-kanto-btn"> YES </button>
+      <button class="fetch-hoenn-btn"> NO... </button>
+    </div>
+  </section>
+  <section class="response medpad">
+    
+  </section>
 
-  <h1 id="h-one">Have you moved today?</h1>
-  <button id="fetch-kanto-btn"> YES </button>
-  <button id="fetch-hoenn-btn"> NO... </button>
-
-  <p class="col"> Pros of moving:
-    <li> Exercise controls weight.</li>
-    <li> Exercise can help prevent excess weight gain or help maintain weight loss </li>
-    <li> Exercise combats health conditions and diseases. </li>
-    <li> Exercise improves mood </li>
-    <li> Exercise boosts energy </li>
-    <li> Exercise promotes better sleep </li>
-  </p>
-
-  <p class="container"> Cons of not moving:
-    <li> Obesity </li>
-    <li> Heart diseases, including coronary artery disease and heart attack </li>
-    <li> High blood pressure </li>
-    <li> High cholesterol </li>
-    <li> Stroke </li>
-    <li> Metabolic syndrome </li>
-    <li> Type 2 diabetes </li>
-    <li> Certain cancers, including colon, breast, and uterine cancers </li>
-    <li> Osteoporosis and falls </li>
-    <li> Increased feelings of depression and anxiety </li>
-  </p>
-
+  <section class="medpad">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 bullets">
+          <p> Pros of moving:
+            <li> Exercise controls weight</li>
+            <li> Exercise can help prevent excess weight gain or help maintain weight loss </li>
+            <li> Exercise combats health conditions and diseases. </li>
+            <li> Exercise improves mood </li>
+            <li> Exercise boosts energy </li>
+            <li> Exercise promotes better sleep </li>
+          </p>
+        </div>
+        <div class="col-md-6 bullets">
+          <p class="mb-1"> Cons of not moving:
+            <li> Obesity </li>
+            <li> Heart diseases, including coronary artery disease and heart attack </li>
+            <li> High blood pressure </li>
+            <li> High cholesterol </li>
+            <li> Stroke </li>
+            <li> Metabolic syndrome </li>
+            <li> Type 2 diabetes </li>
+            <li> Certain cancers, including colon, breast, and uterine cancers </li>
+            <li> Osteoporosis and falls </li>
+            <li> Increased feelings of depression and anxiety </li>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
   <p id="response-output">Response Placeholder</p>
   <img id="image" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/ronburgundy-1520353235.png">
 
