--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
       <h1>|| Move It Move It || Have you moved today?</h1>
     </div>
     <div class="container">
-      <button class="fetch-kanto-btn"> YES </button>
-      <button class="fetch-hoenn-btn"> NO... </button>
-      <button class="apiButton"> API Button </button>
+      <!-- <button class="fetch-kanto-btn"> YES </button>
+      <button class="fetch-hoenn-btn"> NO... </button> -->
+      <button id="apiButton"> API Button </button>
     </div>
   </section>
   <section class="response medpad">
-    
+
   </section>
 
   <section class="medpad">
@@ -70,27 +70,28 @@
 
       const responseText = document.getElementById('response-output')
 
-fetchApi.addEventListener('click', async () => {
-  const response = await fetch('/.netlify/functions/pokedex').then(response => response.json())
+      fetchApi.addEventListener('click', async () => {
+        const response = await fetch('/.netlify/functions/pokedex').then(response => response.json()).catch(err => console.error('error in fetch: ', err));
+        console.log('response is: ', response)
         responseText.innerText = JSON.stringify(response)
       })
-})
+    })
 
-      fetchPokedexBtn.addEventListener('click', async () => {
-        const response = await fetch('/.netlify/functions/pokedex').then(response => response.json())
-        responseText.innerText = JSON.stringify(response)
-      })
+    // fetchPokedexBtn.addEventListener('click', async () => {
+    //   const response = await fetch('/.netlify/functions/pokedex').then(response => response.json())
+    //   responseText.innerText = JSON.stringify(response)
+    // })
 
-      fetchKantoBtn.addEventListener('click', async () => {
-        const response = await fetch('/.netlify/functions/pokedex', {
-          method: 'POST',
-          body: JSON.stringify({
-            region: 'kanto'
-          })
-        }).then(response => response.json())
-        responseText.innerText = JSON.stringify(response)
-      })
-    
+    // fetchKantoBtn.addEventListener('click', async () => {
+    //   const response = await fetch('/.netlify/functions/pokedex', {
+    //     method: 'POST',
+    //     body: JSON.stringify({
+    //       region: 'kanto'
+    //     })
+    //   }).then(response => response.json())
+    //   responseText.innerText = JSON.stringify(response)
+    // })
+
   </script>
 </body>
 
